[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/hexagon-fsm/fsm.gd" type="Script" id=2]
[ext_resource path="res://assets/grounded_state.gd" type="Script" id=3]
[ext_resource path="res://assets/example_character.gd" type="Script" id=4]
[ext_resource path="res://assets/jump_state.gd" type="Script" id=5]
[ext_resource path="res://assets/fall_state.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 5.5 )

[node name="ExampleCharacter" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="GroundedState" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 3 )

[node name="JumpState" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 5 )

[node name="FallState" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectGround" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="DetectGround"]
position = Vector2( 0, 26.5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="DetectGround" to="FiniteStateMachine/GroundedState" method="_on_DetectGround_area_entered"]
[connection signal="area_exited" from="DetectGround" to="FiniteStateMachine/FallState" method="_on_DetectGround_area_exited"]
